django-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django
  labels:
    app: django
    tier: frontend
spec:
    replicas: 3
    selector:
        matchLabels:
            app: django
            tier: frontend
    template:
        metadata:
            labels:
                app: django
                tier: frontend
        spec:
            containers:
                - name: django
                  image: josemanuel4fernandez/django:v2
                  ports:
                    - containerPort: 8006
                      name: django
